crates/ruff_python_parser/tests/snapshots/invalid_syntax@while_stmt_missing_test.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..30,
        body: [
            While(
                StmtWhile {
                    node_index: NodeIndex(None),
                    range: 0..11,
                    test: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 5..5,
                            id: Name(""),
                            ctx: Invalid,
                        },
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 8..11,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 8..11,
                                    },
                                ),
                            },
                        ),
                    ],
                    orelse: [],
                    runtime_body: None,
                    runtime_orelse: None,
                },
            ),
            While(
                StmtWhile {
                    node_index: NodeIndex(None),
                    range: 12..29,
                    test: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 17..17,
                            id: Name(""),
                            ctx: Invalid,
                        },
                    ),
                    body: [
                        Assign(
                            StmtAssign {
                                node_index: NodeIndex(None),
                                range: 24..29,
                                targets: [
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 24..25,
                                            id: Name("a"),
                                            ctx: Store,
                                        },
                                    ),
                                ],
                                value: NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: NodeIndex(None),
                                        range: 28..29,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                runtime_targets: None,
                                runtime_type_comment: None,
                                runtime_type_comment_bytes: None,
                            },
                        ),
                    ],
                    orelse: [],
                    runtime_body: None,
                    runtime_orelse: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | while : ...
  |       ^ Syntax Error: Expected an expression
2 | while :
3 |     a = 1
  |


  |
1 | while : ...
2 | while :
  |       ^ Syntax Error: Expected an expression
3 |     a = 1
  |
